--- a/TODO.org
+++ b/TODO.org
@@ -1,7 +1,7 @@
 #+TODO: TODO WORKING | DONE
 
 * DONE Default set is previous one used
-* WORKING Make the alerts pretty
+* DONE Make the alerts pretty
 * TODO Create Users and Authentication
 * TODO Clean up bootstrap layout stuff
 * TODO Clean up 'Add Card' form with ActionForm
