Add card type logic

--- a/TODO.org
+++ b/TODO.org
@@ -6,7 +6,8 @@
   - [X] Add casting cost to cards
   - [X] Show casting cost with card
   - [X] Columns based on CMC
-* WORKING Sort Cards by Card Type
+* DONE Sort Cards by Card Type
+* TODO Prioritize types (only example: artifact creature should be creature)
 * TODO Add Card Pictures (hover?)
 * TODO Show decks in Index
 * TODO Allow deletion of cards from deck
