--- a/TODO.org
+++ b/TODO.org
@@ -7,6 +7,9 @@
   - [X] Show casting cost with card
   - [X] Columns based on CMC
 * DONE Sort Cards by Card Type
+* DONE easy way of adding lands
+* DONE grouping cards by all types
+* DONE grouping cards by name
 * TODO Prioritize types (only example: artifact creature should be creature)
 * TODO Display types better
 * TODO Add Planewalker type displays
