--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-- Allow deletion of cards from deck
+- A better way to add cards with select 2
 - Group cards by name
 - Automatically associate dates/player names
 - Clean up bootstrap layout stuff
